[project]
name = "gamebot-lite"
version = "0.1.0"
description = "Lightweight Survivor data snapshot (SQLite)"
authors = [
  { name = "Gamebot Team" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas",
]

[tool.setuptools]
packages = ["gamebot_lite"]
include-package-data = true

[tool.setuptools.package-data]
"gamebot_lite" = ["data/*.sqlite"]
